--- a/src/faq.html
+++ b/src/faq.html
@@ -22,7 +22,7 @@
       <p class="title" click.delegate="showFaqItem(3)"><i class="fa fa-fw fa-angle-right"></i> Security considerations</p>
       <div class="content">
         <p class="inner-content">
-        <strong>TL;DR - while Bitf.ly is secure against non-sophisticated threats we advise against using the service for highly sensitive data.</strong><br/>
+        <strong>TL;DR - while Bitfly is secure against non-sophisticated threats we advise against using the service for highly sensitive data.</strong><br/>
 
         There are both pros and cons to our approach.<br/>
         - You still have to trust the service (meaning us). There is no viable method for delivery of signed code to the browser. You have to trust that we have not done any malicious modifications to the client-side code and that our servers were not compromised.<br/>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="list-item" data-faq-item="5">
-      <p class="title" click.delegate="showFaqItem(5)"><i class="fa fa-fw fa-angle-right"></i> Is Bitf.ly open-source?</p>
+      <p class="title" click.delegate="showFaqItem(5)"><i class="fa fa-fw fa-angle-right"></i> Is Bitfly open-source?</p>
       <div class="content">
         <p class="inner-content">
         Yes! Bitfly's code is MIT- licensed and very small (less than 3000 lines). You can fork all of our code by clicking on the 'GitHub' button at the bottom of the page. Pull-requests are welcome!
