--- a/src/app.html
+++ b/src/app.html
@@ -128,7 +128,7 @@
     </div>
   </div>
 
-  <div>
+  <div if.bind="totalTransfers">
     BITFLY HAS SHIPPED ${totalTransfers} FILES SO FAR
   </footer>
 </template>
