--- a/src/app.html
+++ b/src/app.html
@@ -128,7 +128,7 @@
     </div>
   </div>
 
-  <div if.bind="totalTransfers" style="padding-top: 8px;">
+  <div style="padding-top: 8px;">
     BITFLY HAS SHIPPED ${totalTransfers} FILES SO FAR
   </div>
 
