--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
             Secure file transfer
           </div>
         </div>
-        <div class="header-right">
-          <div class="header-item logo">
-            <a href="https://bitf.ly">Bit<span style="color: #346BC8;">fly</span></a>
-          </div>
-        </div>
       </header>
     </div>
 
     <div class="hero-content main" aurelia-app="main">
       <h1 class="title">
-        <a href="https://bitf.ly">Bit<span style="color: #346BC8;">fly</span>
+        <a href="https://bitf.ly">Bit<span style="color: #346BC8;">f.ly</span>
         </a></h1>
       <h2 class="subtitle">Free and simple file transfer to any device with a modern browser</h2>
       Now loading..
