--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,7 @@
 <template>
+  <div class="container">
+    <h1 class="logo"><a href="https://bitf.ly">Bit<span style="color: #346BC8;">f.ly</span></a></h1>
+  </div>
   <div class="hero-content">
     <div show.bind="!showFaq" class="container">
       <div if.bind="reader && reader.largeFile && !reader.veryLargeFile" class="notification is-warning">
