typo in description

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <base href="http://localhost:9000/">
-    <title>Bitfly - secure peer-to-peer file transfer over WebRTC</title>
-    <meta name="description" content="Secure, free file transfer to device with a modern browser">
+    <title>Bitfly - secure file transfer</title>
+    <meta name="description" content="Free and secure file transfer to any device. No file limit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="jspm_packages/npm/bulma@0.0.16/css/bulma.min.css">
@@ -29,7 +29,7 @@
       <h1 class="title">
         <a href="https://bitf.ly">Bit<span style="color: #346BC8;">f.ly</span>
         </a></h1>
-      <h2 class="subtitle">Free and simple file transfer to any device with a modern browser</h2>
+      <h2 class="subtitle">Simple and free file transfer to any device with a modern browser</h2>
       Now loading..
       <script src="jspm_packages/system.js"></script>
       <script src="config.js"></script>
