--- a/src/app.html
+++ b/src/app.html
@@ -129,7 +129,11 @@
 
     <div show.bind="showFaq">
       <compose view-model="faq"></compose>
-      <a click.delegate="showFaq = false"><h1 class="subtitle" style="margin-top: 2em;">Go back to the main page</h1></a>
+      <a click.delegate="showFaq = false">
+        <h1 class="subtitle" style="margin-top: 2em; margin-bottom: 2em;">
+          Go back to the main page
+        </h1>
+      </a>
     </div>
   </div>
 
