--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <base href="http://localhost:9000/">
-    <title>Bitfly - secure file transfer</title>
+    <title>Secure file transfer to any device with a modern browser</title>
     <meta name="description" content="Free and secure file transfer to any device. No file limit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="jspm_packages/npm/font-awesome@4.5.0/css/font-awesome.min.css">
