--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 
     <div class="hero-content main" aurelia-app="main">
       <h1 class="title">
-        <a href="https://bitf.ly">Bit<span style="color: #346BC8;">f.ly</span>
-        </a></h1>
+        <a href="https://bitf.ly">
+          <img class="logo" src="images/logo.png">
+        </a>
+      </h1>
       <h2 class="subtitle">Simple and free file transfer to any device with a modern browser</h2>
       Now loading..
       <script src="jspm_packages/system.js"></script>
