--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,10 @@
 <template>
   <div class="container">
-    <h1 class="logo"><a href="https://bitf.ly">Bit<span style="color: #346BC8;">f.ly</span></a></h1>
+    <h1 class="logo">
+      <a href="https://bitf.ly">
+        <img class="logo" src="images/logo.png">
+      </a>
+    </h1>
   </div>
   <div class="hero-content">
     <div show.bind="!showFaq" class="container">
